--- a/prepros-6.config
+++ b/prepros-6.config
@@ -17,8 +17,9 @@
       "SCSS",
       "fonts",
       "css/layout",
-      "css",
-      "SCSS/sections"
+      "SCSS/sections",
+      "SCSS/layout",
+      "css"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -40,6 +41,7 @@
         "SCSS/config/variables.scss",
         "SCSS/layout/fonts.scss",
         "SCSS/layout/base.scss",
+        "SCSS/layout/adjustment.scss",
         "SCSS/sections/hero.scss"
       ]
     }
