--- a/prepros-6.config
+++ b/prepros-6.config
@@ -42,7 +42,8 @@
         "SCSS/layout/fonts.scss",
         "SCSS/layout/base.scss",
         "SCSS/layout/adjustment.scss",
-        "SCSS/sections/hero.scss"
+        "SCSS/sections/hero.scss",
+        "SCSS/common/common.scss"
       ]
     }
   ],
