--- a/prepros-6.config
+++ b/prepros-6.config
@@ -43,6 +43,7 @@
         "SCSS/layout/base.scss",
         "SCSS/layout/adjustment.scss",
         "SCSS/sections/hero.scss",
+        "SCSS/sections/best.scss",
         "SCSS/common/common.scss"
       ]
     }
