--- a/prepros-6.config
+++ b/prepros-6.config
@@ -14,12 +14,12 @@
   ],
   "fileTree": {
     "expandedDirs": [
-      "SCSS",
       "fonts",
       "css/layout",
       "SCSS/sections",
       "SCSS/layout",
-      "css"
+      "css",
+      "SCSS"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -44,6 +44,8 @@
         "SCSS/layout/adjustment.scss",
         "SCSS/sections/hero.scss",
         "SCSS/sections/best.scss",
+        "SCSS/sections/goods.scss",
+        "SCSS/sections/team.scss",
         "SCSS/common/common.scss"
       ]
     }
