flexbox webinar end'ed

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -18,8 +18,8 @@
       "css/layout",
       "SCSS/sections",
       "SCSS/layout",
-      "css",
-      "SCSS"
+      "SCSS",
+      "css"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -46,6 +46,10 @@
         "SCSS/sections/best.scss",
         "SCSS/sections/goods.scss",
         "SCSS/sections/team.scss",
+        "SCSS/sections/menu.scss",
+        "SCSS/sections/reviews.scss",
+        "SCSS/sections/order.scss",
+        "SCSS/common/fixed-menu.scss",
         "SCSS/common/common.scss"
       ]
     }
