--- a/prepros-6.config
+++ b/prepros-6.config
@@ -122,6 +122,7 @@
     "uploadOnChange": false,
     "ftp": {
       "secure": false,
+      "keepAlive": true,
       "host": "",
       "port": 21,
       "user": "",
